fixes, more modularity and cleanup, sse support for bidirectional comms without sockets

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "esbuild"
   ],
   "dependencies": {
-    "dotenv": "*",
     "openai": "*"
   },
   "devDependencies": {
-    "concurrently":"~9.1.2"
+    "better-sse": "^0.14.1",
+    "concurrently": "*",
+    "dotenv": "*",
+    "ws": "*"
   },
   "nodemonConfig": {
     "env": {
